--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@ h1, h3 {
     font-weight: 700;
 }
 
+h3 {
+    margin-bottom: 5px;
+}
+
 p {
     margin: 10px 0;
 }
@@ -97,14 +101,15 @@ p.lead {
 }
 
 .box .plain.title {
-    font-size: 1.5em;
-    font-weight: 700;
+/*    font-size: 1.5em;*/
+/*    font-weight: 700;*/
 }
 
 .verily-logo {
     font-family: 'Abril Fatface', cursive; 
     text-decoration: none;
-    font-size: 3em !important;
+    font-size: 2em;
+    font-weight: 400;
     color: #00aaaa;
 }
 
