--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,12 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+        <!--<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
         
         <link href="//fonts.googleapis.com/css?family=News+Cycle:400,700|Abril+Fatface|Cinzel+Decorative:900" rel="stylesheet" type="text/css">
 
         <!-- Latest compiled and minified JavaScript -->
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
