--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,7 @@ ul.nav-linear li {
 .faveparts-logo {
     font-family: 'Playfair Display', cursive; 
     text-decoration: none;
-    font-size: 2em;
+    font-size: 42px;
     font-weight: 700;
 	color: inherit;
 }
