--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ p.lead {
     margin-bottom: 10px;
 }
 
+.text-muted {
+	color: #999;
+}
+
 .outlink {
     font-size: 1.3em;
     padding-right: 10px;
