--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,17 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
+        
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+          ga('create', 'UA-75626861-1', 'auto');
+          ga('send', 'pageview');
+
+        </script>
     </head>
     <body>
         <a href="#content" class="sr-only">Skip to main content</a>
@@ -37,5 +47,11 @@
 				</div>
             </div>
         </footer>
+		<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+		<script type="text/javascript">
+		    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":null,"theme":"light-bottom"};
+		</script>
+		<script type="text/javascript" src="//s3.amazonaws.com/cc.silktide.com/cookieconsent.latest.min.js"></script>
+		<!-- End Cookie Consent plugin -->
     </body>
 </html>
