--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,17 @@ h3 {
     margin-bottom: 5px;
 }
 
+.h1, .h2, .h3, h1, h2, h3 {
+    margin-top: 0;
+    padding-top: 20px;
+}
+
 p {
     margin: 10px 0;
 }
 
 p.lead {
+    font-size: 21px;
     margin-bottom: 10px;
 }
 
@@ -90,10 +96,15 @@ ul.nav-linear li {
 }
 
 .self-image {
-	width: 12em;
+    width: 4em;
 	-webkit-clip-path: circle(48% at 50% 49%);
 	clip-path: circle(48% at 50% 49%);
-	margin: 0 auto;
+	
+}
+
+.home .self-image {
+	width: 12em;
+    margin: 0 auto;
 }
 
 @media (min-width: 400px) {
@@ -115,7 +126,7 @@ ul.nav-linear li {
 		text-align: left;
 	}
 	
-	.self-image {
+	.home .self-image {
 		float: right;
 	}
 }
@@ -214,5 +225,128 @@ ul.nav-linear li {
 
 footer {
     margin-top: 2em;
+    margin-bottom: 2em;
 }
 
+main.places .cards {
+    margin-top: 15px;
+}
+
+.places .hero {
+    height: 400px;
+    color: #fff;
+}
+
+.places .hero-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.places .hero:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 105%;
+    height: 400px;
+    overflow: hidden;
+    top: -14px;
+    left: -14px;
+    right: -14px;
+    z-index: 0;
+    background-repeat: no-repeat;
+    background-attachment: local;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -webkit-filter: blur(14px);
+    -moz-filter: blur(14px);
+    -o-filter: blur(14px);
+    -ms-filter: blur(14px);
+    filter: blur(14px);
+    transition: all 0.5s ease;
+}
+
+.places .cards .card {
+    background-repeat: no-repeat;
+    background-attachment: local;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: center center;
+    height: 350px;
+}
+
+.places .cards .card.card-hero {
+    height: 900px;
+}
+
+.places .hero.in-focus:before {
+    -webkit-filter: blur(0px);
+    -moz-filter: blur(0px);
+    -o-filter: blur(0px);
+    -ms-filter: blur(0px);
+    filter: blur(0px);
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.places .hero {
+    overflow: hidden;
+}
+
+.places .hero a {
+    color: #fff;
+}
+
+.places a.contributor-image-container {
+    display: block;
+    width: 4em;
+}
+
+.places .hero h1 {
+    font-size: 54px;
+}
+
+.places .hero .overlay {
+    position: absolute;
+    width: 100%;
+    height: 386px;
+}
+
+.places .hero .overlay.overlay-dark {
+    background: rgba(0, 0, 0, 0.3);
+}
+
+.places .hero .lead {
+    font-size: 24px;
+}
+
+@media (min-width: 768px) {
+    .places .hero h1 {
+        font-size: 72px;
+    }
+    
+    .places .hero .lead {
+        font-size: 32px;
+    }
+}
+
+.places .hero.montreal:before {
+    background-image: url(../images/downtown-montreal-from-mount-royal.jpg);
+    background-position: 50% 25%;
+}
+
+.places .hero.montreal h1 {
+    font-family: 'Permanent Marker', cursive;
+}
+
+.places .hero .contributors {
+    margin-top: 1em;
+}
+
+.places .hero p {
+    max-width: 700px;
+}
