--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,6 @@ h3 {
     margin-bottom: 5px;
 }
 
-.h1, .h2, .h3, h1, h2, h3 {
-    margin-top: 0;
-    padding-top: 20px;
-}
-
 p {
     margin: 10px 0;
 }
@@ -230,6 +225,11 @@ footer {
 
 main.places .cards {
     margin-top: 15px;
+}
+
+main.places .hero .h1, main.places .hero h1 {
+    margin-top: 0;
+    padding-top: 20px;
 }
 
 .places .hero {
