--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,13 +40,17 @@
         <footer>
             <div class="container">
 				<div>
-					&copy; {{ site.time | date: '%Y' }} {{ site.name }}
+					&copy; <span class="copyright-year"></span> {{ site.name }}
 				</div>
 				<div class="text-muted">
 					Trademarks are the property of their respective owners.
 				</div>
             </div>
         </footer>
+        
+        <script src="//code.jquery.com/jquery-1.12.3.min.js"></script>
+        <script src="/js/app.js"></script>
+        
 		<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
 		<script type="text/javascript">
 		    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience.","dismiss":"Okay","learnMore":"More info","link":null,"theme":"light-bottom"};
