--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
 
           ga('send', 'pageview');
         </script>
-		<script async src="//www.google-analytics.com/analytics.js"></script>
-		<script async src="//cdnjs.cloudflare.com/ajax/libs/autotrack/1.1.0/autotrack.js"></script>
+		<script src="//www.google-analytics.com/analytics.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/autotrack/1.1.0/autotrack.js"></script>
     </head>
     <body>
         <a href="#content" class="sr-only">Skip to main content</a>
