--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,14 @@
 		  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 		  ga('create', 'UA-75626861-1', 'auto');
 
-		  ga('require', 'maxScrollTracker');
-		  ga('require', 'mediaQueryTracker');
+		  ga('require', 'maxScrollTracker', {
+		    hitFilter: function(model) {
+		      var scrollPercentage = model.get('eventLabel');
+		      if (scrollPercentage > 50) {
+		        model.set('nonInteraction', true, true);
+		      }
+		    },
+		  });
 		  ga('require', 'outboundLinkTracker');
 
           ga('send', 'pageview');
