--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,9 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
         
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics_debug.js','ga');
-		  
+        <script>	  
 		  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 		  ga('create', 'UA-75626861-1', 'auto');
-
 		  ga('require', 'maxScrollTracker', {
 		    hitFilter: function(model) {
 		      var scrollPercentage = model.get('eventLabel');
@@ -34,7 +28,7 @@
 		    },
 		  });
 		  ga('require', 'outboundLinkTracker');
-
+		  ga('require', 'urlChangeTracker');
           ga('send', 'pageview');
         </script>
 		<script async src="//www.google-analytics.com/analytics.js"></script>
