--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 		  ga('require', 'urlChangeTracker');
           ga('send', 'pageview');
         </script>
-		<script async src="//www.google-analytics.com/analytics.js"></script>
+		<script async src="//www.google-analytics.com/analytics_debug.js"></script>
 		<script async src="//cdnjs.cloudflare.com/ajax/libs/autotrack/1.1.0/autotrack.js"></script>
     </head>
     <body>
