--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
         
+		<script src="//www.google-analytics.com/analytics_debug.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/autotrack/1.1.0/autotrack.js"></script>
         <script>	  
 		  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 		  ga('create', 'UA-75626861-1', 'auto');
@@ -24,8 +26,6 @@
 		  ga('require', 'urlChangeTracker');
           ga('send', 'pageview');
         </script>
-		<script async src="//www.google-analytics.com/analytics_debug.js"></script>
-		<script async src="//cdnjs.cloudflare.com/ajax/libs/autotrack/1.1.0/autotrack.js"></script>
     </head>
     <body>
         <a href="#content" class="sr-only">Skip to main content</a>
