--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
         
-		<script src="//www.google-analytics.com/analytics_debug.js"></script>
+		<script src="//www.google-analytics.com/analytics.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/autotrack/1.1.0/autotrack.js"></script>
         <script>	  
 		  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
