--- a/css/main.css
+++ b/css/main.css
@@ -231,11 +231,25 @@ ul.nav-linear li {
 /*    font-weight: 700;*/
 }
 
+.epi-logo {
+	display: block;
+	background: url(/images/epi-logo.svg) no-repeat;
+  height: 3.5em;
+  max-width: 6em;
+}
+
+.epiarc-logo {
+	display: block;
+	background: url(/images/epiarc-logo.svg) no-repeat;
+	height: 3.5em;
+  max-width: 10em;
+}
+
 .singletrack-logo {
 	display: block;
 	background: url(/images/singletrack-cmyk.svg) no-repeat;
 	height: 1.5em;
-    max-width: 12em;
+  max-width: 12em;
 }
 
 .verily-logo {
