--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,14 +16,13 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
         
-		<script src="//www.google-analytics.com/analytics.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/autotrack/1.1.0/autotrack.js"></script>
-        <script>	  
-		  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-		  ga('create', 'UA-75626861-1', 'auto');
-		  ga('require', 'outboundLinkTracker');
-		  ga('require', 'urlChangeTracker');
-          ga('send', 'pageview');
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-NKL3CJ604N"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-NKL3CJ604N');
         </script>
     </head>
     <body>
