--- a/_layouts/places.html
+++ b/_layouts/places.html
@@ -35,15 +35,13 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
         
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKL3CJ604N"></script>
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-          ga('create', 'UA-75626861-1', 'auto');
-          ga('send', 'pageview');
-
+            gtag('config', 'G-NKL3CJ604N');
         </script>
     </head>
     <body>
